# model-based_labelimg2xml

./: .gitignore  CMakeLists.txt  README.md  model.cpp  model.h
asset/: yolov4-tiny-obj-rc.cfg
